--- a/www/app.css
+++ b/www/app.css
@@ -354,7 +354,7 @@ hr {
     display: none; } }
 
 #notification {
-  z-index: 9999;
+  z-index: 100;
   position: absolute;
   top: 50px;
   width: calc(100% - 120px);
@@ -415,7 +415,7 @@ hr {
           margin-left: 10px; } }
 
 #timer {
-  z-index: 9999;
+  z-index: 100;
   position: absolute;
   top: 50px;
   width: calc(100% - 120px);
@@ -489,7 +489,7 @@ hr {
   bottom: 0px;
   width: 100%;
   transition: 0.5s;
-  z-index: 9999;
+  z-index: 100;
   position: absolute; }
   @media only screen and (min-width: 768px) {
     #info {
@@ -737,6 +737,45 @@ input[type="checkbox"]:checked + .checkbox + .btn-toggle {
   border-top-color: transparent;
   border-bottom-color: transparent;
   margin: 4px 6px; }
+
+.modal {
+  position: fixed;
+  z-index: 110;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4); }
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 100%;
+  max-width: 500px;
+  height: 100%;
+  overflow: scroll;
+  box-sizing: border-box; }
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold; }
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer; }
+
+.modal-open {
+  display: block; }
+
+.modal-close {
+  display: none; }
 
 .ol-box {
   box-sizing: border-box;
