--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -17,7 +17,7 @@
     width: 100%;
     max-width: 500px;
     height: 100%;
-    overflow: scroll;
+    overflow: auto;
     box-sizing: border-box;
 }
 
