--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -113,8 +113,8 @@
         
         &[type=button] {
             @extend .button;
-            width: calc(100% - 4px);
-            margin: 2px;
+            width: calc(100% - 8px);
+            margin: 2px 4px;
         }
         
         &:checked {
