--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -19,6 +19,7 @@
     height: 100%;
     overflow: auto;
     box-sizing: border-box;
+    box-shadow: 1px 2px 6px 0px rgba(0, 0, 0, 0.4);
 }
 
 .close {
@@ -41,4 +42,10 @@
 
 .modal-close {
     display: none;
+}
+
+#about .modal-content {
+    height: 200px;
+    margin-top: 100px;
+    border-radius: 10px;
 }
