--- a/src/template/index.j2
+++ b/src/template/index.j2
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
 
-    <meta charset="utf-8">
-    <title>Dota 2 Interactive Map v4</title>
-    <meta name="description" content="Dota 2 Interactive Map. View, pan, and zoom in on any part of the Dota 2 map. Turn on various overlays for more information, place wards to see sight ranges, and measure distances.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+{% block head %}
+{{ super() }}
 <!-- @if NODE_ENV!='production' -->
 <link rel="stylesheet" href="app.css" type="text/css">
 <!-- @endif -->
 <!-- @if NODE_ENV='production' !>
 <link rel="stylesheet" href="app-<!-- @echo COMMIT_HASH !>.min.css" type="text/css">
 <!-- @endif -->
-</head>
-<body>
+{% endblock head %}
+
+{% block body %}
     <div id="map"></div>
     <div id="tool-btn-container"><!--
      --><a id="btn-zoom-in" href="javascript:void(0)" class="btn-tool"><div class="zoom-label">+</div></a><!--
@@ -224,8 +220,8 @@
         </div>
     </div>
     
-    
-        
+    {% block js %}
+        {{ super() }}
         <!-- @if NODE_ENV!='production' -->
         <script src="bundle.js"></script>
         <script>InteractiveMap("tiles/", "img/map_data.png")</script>
@@ -234,6 +230,5 @@
         <script src="bundle-<!-- @echo COMMIT_HASH !>.min.js"></script>
         <script>InteractiveMap("<!-- @echo map_data_path !>", "<!-- @echo vision_data_image_path !>")</script>
         <!-- @endif -->
-    
-</body>
-</html>
+    {% endblock js %}
+{% endblock body %}
