--- a/src/template/index.j2
+++ b/src/template/index.j2
@@ -219,6 +219,9 @@
             <a href="https://github.com/devilesk/dota-interactive-map">GitHub</a>
         </div>
     </div>
+    <div class="coordinates-container">
+        <div id="coordinates"></div>
+    </div>
     
     {% block js %}
         {{ super() }}
