--- a/src/template/index.j2
+++ b/src/template/index.j2
@@ -98,15 +98,10 @@
                 </div>
                 <hr>
                 <div class="menu-item">
-                    <input type="button" id="reset" value="Reset Map"/>
+                    <input type="button" id="reset" class="button" value="Reset Map"/>
                 </div>
-                <hr>
-                <div class="menu-item">
-                    <input type="button" id="help-open" value="Help"/>
-                </div>
-                <hr>
-                <div class="menu-item">
-                    <input type="button" id="about-open" value="About"/>
+                <div class="menu-item button-half-container">
+                    <input type="button" id="help-open" class="button-half" value="Help"/><input type="button" id="about-open" class="button-half" value="About"/>
                 </div>
             </div>
         </div>
