add analytics block

--- a/src/template/index.j2
+++ b/src/template/index.j2
@@ -224,6 +224,9 @@
         <div id="coordinates"></div>
     </div>
     
+    {% block analytics %}
+        {{ super() }}
+    {% endblock analytics %}
     {% block js %}
         {{ super() }}
         <!-- @if NODE_ENV!='production' -->
