--- a/src/template/template.j2
+++ b/src/template/template.j2
@@ -10,6 +10,7 @@
 </head>
 <body>
     {%- block body -%}
+        {% block analytics %}{% endblock analytics %}
         {%- block js %}{% endblock js -%}
     {%- endblock body -%}    
 </body>
