--- a/www/app.css
+++ b/www/app.css
@@ -310,6 +310,11 @@ select:hover {
       .menu-item input[type=radio]:checked + .checkbox.inverse, .menu-item input[type=checkbox]:checked + .checkbox.inverse {
         background-color: #111;
         color: #f1f1f1; }
+    .menu-item input[type=radio]:disabled + .checkbox, .menu-item input[type=checkbox]:disabled + .checkbox {
+      cursor: not-allowed;
+      opacity: 0.5; }
+      .menu-item input[type=radio]:disabled + .checkbox:hover, .menu-item input[type=checkbox]:disabled + .checkbox:hover {
+        color: #818181; }
     .menu-item input[type=radio][name="base-type"]:checked + .checkbox, .menu-item input[type=checkbox][name="base-type"]:checked + .checkbox {
       background-color: #111;
       color: #f1f1f1; }
