--- a/src/scss/message.scss
+++ b/src/scss/message.scss
@@ -141,6 +141,7 @@
     margin: 10px;
     box-shadow: 1px 2px 6px 0px rgba(0, 0, 0, 0.4);
     line-height: 22px;
+    min-height: 22px;
 }
 
 .info-header {
