--- a/www/app.css
+++ b/www/app.css
@@ -637,7 +637,8 @@ select:hover {
   background-color: white;
   margin: 10px;
   box-shadow: 1px 2px 6px 0px rgba(0, 0, 0, 0.4);
-  line-height: 22px; }
+  line-height: 22px;
+  min-height: 22px; }
 
 .info-header {
   font-weight: bold;
