--- a/src/template/index.j2
+++ b/src/template/index.j2
@@ -227,7 +227,7 @@
     <div id="help" class="modal modal-close">
         <div class="modal-content">
             <span id="help-close" class="close">&times;</span>
-            <!-- @include www/help.html -->
+            <!-- @include src/template/help.html -->
         </div>
     </div>
     <div id="about" class="modal modal-close">
