--- a/www/app.css
+++ b/www/app.css
@@ -894,4 +894,4 @@ input[type="checkbox"]:checked + .checkbox + .btn-toggle {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -webkit-tap-highlight-color: transparent; }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
